# par-particle-life

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  publish-crates.yml  publish-homebrew-cask-core.yml  publish-homebrew-cask-run.yml  release.yml
benches/: physics.rs
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DOCUMENTATION_STYLE_GUIDE.md  GENERATORS.md  README.md  SHADERS.md
homebrew/Casks/: par-particle-life.rb
shaders/: bin_clear.wgsl  bin_count.wgsl  bin_prefix_sum.wgsl  bin_sort.wgsl  brush_circle.wgsl  brush_force.wgsl  particle_advance.wgsl  particle_forces.wgsl  particle_forces_binned.wgsl  particle_render.wgsl  particle_render_glow.wgsl  particle_render_infinite.wgsl  particle_render_mirror.wgsl
src/: lib.rs  main.rs  video_recorder.rs
src/app/: config.rs  gpu_state.rs  input.rs  mod.rs  preset.rs  state.rs
src/app/handler/: brush.rs  buffer_sync.rs  events.rs  gpu_compute.rs  init.rs  mod.rs  presets_ops.rs  recording.rs  render.rs  ui.rs  update.rs
src/generators/: colors.rs  mod.rs  positions.rs  rules.rs
src/renderer/: mod.rs
src/renderer/gpu/: buffers.rs  context.rs  mod.rs
src/renderer/gpu/pipelines/: brush.rs  compute.rs  mod.rs  render.rs  spatial.rs
src/simulation/: boundary.rs  game_of_life.rs  mod.rs  particle.rs  physics.rs  spatial_hash.rs
src/ui/: mod.rs
src/utils/: color.rs  math.rs  mod.rs
