[package]
name = "par-particle-life"
version = "0.1.0"
edition = "2024"
authors = ["Paul Robello <paulrobello@gmail.com>"]
license = "AGPL-3.0-or-later"
description = "GPU-accelerated particle life simulation in Rust"
repository = "https://github.com/paulrobello/par-particle-life"
keywords = ["simulation", "particles", "gpu", "wgpu", "egui"]
categories = ["simulation", "graphics", "visualization"]
rust-version = "1.88"

[dependencies]
# GPU/Graphics
wgpu = "27.0.1"
winit = "0.30.12"

# GUI
egui = "0.33.2"
egui-wgpu = "0.33.2"
egui-winit = "0.33.2"

# Math and utilities
glam = { version = "0.30.9", features = ["serde"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
rand = "0.9.2"
rand_chacha = "0.9.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# Async/threading
pollster = "0.4.0"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"

# Logging and errors
log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.17"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }

# Image export
image = "0.25.9"
gif = "0.14.0"
color_quant = "1.1.0"

# Date/time for screenshots
chrono = "0.4.42"

# File system utilities
dirs = "6.0.0"
open = "5.3.3"
half = { version = "2.7.1", features = ["bytemuck"] }

[dev-dependencies]
criterion = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["console"] }
console_error_panic_hook = "0.1.7"

[[bench]]
name = "physics"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
